# irobo-turtlebot

./: CMakeLists.txt  README.md  package.xml  rrt_planner_plugin.xml
LSDC4/: LSDC4.pgm  LSDC4.yaml
config/: ekf_params.yaml  rrt_planner.yaml
include/rrt_planner/: collision_detector.h  random_double_generator.h  rrt_planner.h  rrt_planner_ros.h  utils.h
launch/: amcl.launch  amcl_dataset.launch  amcl_lsdc4.launch  ekf_localization_dataset.launch  gmapping.launch  gmapping_dataset.launch  playbag.launch  rrt_turtlebot.launch  rrt_turtlebot2.launch
maps/: my_map.pgm
param/: costmap_common_params_waffle.yaml  costmap_common_params_waffle_pi.yaml  global_costmap_params.yaml  local_costmap_params.yaml
rviz/: amcl_lsdc4.rviz  gmapping_dataset.rviz  localization_dataset.rviz  rrt.rviz  rrt_turtlebot_sim.rviz
simple_navigation_goals/: CMakeLists.txt  package.xml
simple_navigation_goals/src/: simple_navigation_goals.cpp
src/: calculate_error.py  collision_detector.cpp  cov_uncertainty.py  ground_truth_downsampler.py  random_double_generator.cpp  rrt_planner.cpp  rrt_planner_ros.cpp
