<?xml version="1.0"?>
<package format="2">
  <name>irobo-turtlebot</name>
  <version>1.0.0</version>
  <description>The irobo-turtlebot package</description>

  <maintainer email="tiagovsilva@tecnico.ulisboa.pt">Tiago Vieira da Silva</maintainer>
  <maintainer email="edson.da.veiga@tecnico.ulisboa.pt">Edson Fernando Cabral da Veiga</maintainer>
  <maintainer email="antonio.di.nunzio@tecnico.ulisboa.pt">Antonio di Nunzio</maintainer>

  <license>TODO</license>

  <author email="tiagovsilva@tecnico.ulisboa.pt">Tiago Vieira da Silva</author>
  <author email="edson.da.veiga@tecnico.ulisboa.pt">Edson Fernando Cabral da Veiga</author>
  <author email="antonio.di.nunzio@tecnico.ulisboa.pt">Antonio di Nunzio</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>costmap_2d</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>

  <exec_depend>hector_trajectory_server</exec_depend>
  <exec_depend>gmapping</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>costmap_2d</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>nav_core</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <export>
    <nav_core plugin="${prefix}/rrt_planner_plugin.xml"/>
  </export>

</package>
